tools/KLEE_SOURCE/Release+Asserts/bin/temp_test/klee-out-39/test000008.ptr.err
Error: memory error: out of bound pointer
File: /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c
Line: 19
Stack: 
	#0 00000047 in remove_from_list (head=48949680, node=48951776) at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:19
	#1 00000090 in main () at /home/qirong/Desktop/KLEE_SOURCE/Release+Asserts/bin/link-list3.c:40
Info: 
	address: (ReadLSB w64 0 U0:[(Add w32 7
                            N0:(Extract w32 0 (Add w64 18446744073660600512
                                                       (ReadLSB w64 N1:(Extract w32 0 (Add w64 18446744073660600472
                                                                                               N2:(ReadLSB w64 0 U1:[(Add w32 7
                                                                                                                              N3:(Extract w32 0 (Add w64 18446744073660567464
                                                                                                                                                         (ReadLSB w64 16 a1))))=(Read w8 15 a1),
                                                                                                                     (Add w32 6 N3)=(Read w8 14 a1),
                                                                                                                     (Add w32 5 N3)=(Read w8 13 a1),
                                                                                                                     (Add w32 4 N3)=(Read w8 12 a1),
                                                                                                                     (Add w32 3 N3)=(Read w8 11 a1),
                                                                                                                     (Add w32 2 N3)=(Read w8 10 a1),
                                                                                                                     (Add w32 1 N3)=(Read w8 9 a1),
                                                                                                                     N3=(Read w8 8 a1)] @ const_arr1))) a0))))=(Read w8 (Add w32 7
                                                                                                                                                                                 N4:(Extract w32 0 (Add w64 18446744073660600480 N2)))
                                                                                                                                                                        a0),
                   (Add w32 6 N0)=(Read w8 (Add w32 6 N4)
                                           a0),
                   (Add w32 5 N0)=(Read w8 (Add w32 5 N4)
                                           a0),
                   (Add w32 4 N0)=(Read w8 (Add w32 4 N4)
                                           a0),
                   (Add w32 3 N0)=(Read w8 (Add w32 3 N4)
                                           a0),
                   (Add w32 2 N0)=(Read w8 (Add w32 2 N4)
                                           a0),
                   (Add w32 1 N0)=(Read w8 (Add w32 1 N4)
                                           a0),
                   N0=(Read w8 N4 a0)] @ const_arr5)
	example: 0
	range: [0, 18446744073709551615]
	next: object at 48570672 of size 3
		MO7[3] allocated at global:.str
